--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+hal-reverse (1.0.6) bionic; urgency=high
+
+  * Added synny theme
+  * Fixes plugin name for python import
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Mon, 29 Apr 2019 18:52:10 +0200
+
 hal-reverse (1.0.5) bionic; urgency=high
 
   * GIT repo cleanup
