Updated changelog for v1.0.10

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+hal-reverse (1.0.10) bionic; urgency=high
+
+  * Add python editor save-as button and fix load/save logic (#55)
+  * Add shift-tab unindent in python editor (#51)
+  * fixed readme not showing screenshot
+  * updated readme, fixed gui log not showing multiple spaces, added python bindings for quine mccluskey plugin
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Tue, 30 Apr 2019 19:46:40 +0200
+
 hal-reverse (1.0.8) bionic; urgency=high
 
   * Added plugin directory to include_directories
