--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+hal-reverse (1.0.11) bionic; urgency=high
+
+  * Minor fixes
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Tue, 30 Apr 2019 19:46:40 +0200
+
 hal-reverse (1.0.10) bionic; urgency=high
 
   * Add python editor save-as button and fix load/save logic (#55)
