--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,15 @@
+hal-reverse (1.0.16) bionic; urgency=high
+
+  * Allow changing parent module (#84)
+  * navigation expands the file-name-index when gui starts (#83)
+  * Feature/selection history (#82)
+  * Move to spdlog 1.3.1 (#80)
+  * new tool for generating new plugins (#81)
+  * Fixed homebrew install command in README.md
+  * Fixes for out of source plugin builds
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Thu, 23 May 2019 10:20:12 +0200
+
 hal-reverse (1.0.15) bionic; urgency=high
 
   * Fixed install include path of plugins
