--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,18 @@
+hal-reverse (1.0.17) bionic; urgency=medium
+
+  * Fixed correct python binding of data container and added documentation for it. Closes #78
+  * Rename add_net and insert_gate to assign_net and assign_gate in module class. Closes #85
+  * Fix cursor position upon stdout and stderr text output
+  * Fix build instructions for macOS and import of OpenMP
+  * fixxed documentation
+  * added new features to gate_decorator_bdd:       - generate truth table  - evaluate bdd
+  * python context is no longer printed before each script execution
+  * Hardcode returns from python editor
+  * Display prompt before closing application
+  * Added first issue templates
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Wed, 29 May 2019 14:52:07 +0200
+
 hal-reverse (1.0.16) bionic; urgency=high
 
   * Allow changing parent module (#84)
