--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,13 @@
+hal-reverse (1.0.23.1) bionic; urgency=medium
+
+  * Testing new CI deployment
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Fri, 21 Jun 2019 11:08:23 +0200
+
 hal-reverse (1.0.23) bionic; urgency=medium
 
   * Automated homebrew deployment
-  * Testing new CI deploymenty
+  * Testing new CI deployment
 
  -- Sebastian Wallat <sebastian.wallat@rub.de>  Fri, 21 Jun 2019 10:36:36 +0200
 
