--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+hal-reverse (1.1.1) bionic; urgency=medium
+
+  * Quickfix for Xilinx Simprim gate library
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Thu, 27 Jun 2019 14:21:03 +0200
+
 hal-reverse (1.1.0) bionic; urgency=medium
 
   * Added Support for Xilinx Unisim gate library
