--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+hal-reverse (1.1.6) bionic; urgency=medium
+
+  * Fixed ubuntu ppa build
+
+ -- Sebastian Wallat <sebastian.wallat@rub.de>  Mon, 05 Aug 2019 15:55:18 +0200
+
 hal-reverse (1.1.5) bionic; urgency=medium
 
   * Added uninstall target and fixed make/ninja install on linux with correct ldconfig settings
